# superellipse

./: .stylish-haskell.yaml  CHANGELOG.md  README.md  superellipse.cabal
app/: Main.hs
